fix alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-* {
+html {
   box-sizing: border-box;
   font-family: 'Nunito';
   line-height: 1.5;
@@ -9,6 +9,10 @@
   padding-left:  10px;
 }
 
+*, *::before, *::after (
+
+)
+
 main {
   box-sizing: border-box;
   width: 1200px;
@@ -17,16 +21,18 @@ main {
   max-width: 1200px;  
   padding-right: 10px;
   padding-left:  10px;
+  border-radius: 0em; 
 }
 
 header {
   background-color: black;
   position: absolute;
   border-radius: 0em; 
-  width: 1200px;
+  width: 1220px;
   height: 60px;
   box-sizing: border-box;
   border: 5px black;
+  overflow: hidden;
 }
 
 header > nav > h3 {
@@ -115,12 +121,13 @@ h1 {
 .welcome > h3 {
   color: #f2f2f2;
   display: flex;
-  width: 1000px;
-  height: 300px;
+  width: 900px;
+  height: 400px;
   justify-content: left;
   font-family: 'Nunito';
   font-weight: 800;
   padding-right: 450px;
+  padding-left: 100px;
   font-size: 1.5rem;
 }
 
@@ -160,6 +167,7 @@ h1 {
   width: 500px;
   height: 50px;
   justify-content: left;
+  padding-left: 100px;
 }
 
 .icecream > .container > div > h3 {
@@ -176,7 +184,6 @@ h1 {
   font-family: 'Nunito';
   width: 400px;
   height: 400px;
-  margin-right: 800px;
 }
 
 .team {
@@ -217,6 +224,7 @@ h1 {
   text-align: center;
   width: 500px;
   height: 400px;
+  padding-left: 220px;
 }
 
 .profile {
@@ -265,13 +273,14 @@ h1 {
 footer {
   background-color: black;
   width: 1200px;
-  height: 150px;
+  height: 100px;
   padding-block-start: 20px;
   margin-right: auto;
   margin-left:  auto;
   max-width: 1200px;
   padding-right: 10px;
   padding-left:  10px;
+  border-radius: 0em; 
 }
 
 footer > small > p {
